--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
+  target-branch: master
   on:
     branch: master
